@@ -21,6 +21,26 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|UnsupportedEncodingException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|URLEncoder
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -319,6 +339,31 @@ argument_list|(
 name|this
 argument_list|)
 expr_stmt|;
+try|try
+block|{
+name|id
+operator|=
+name|URLEncoder
+operator|.
+name|encode
+argument_list|(
+name|id
+argument_list|,
+literal|"UTF8"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|UnsupportedEncodingException
+name|e
+parameter_list|)
+block|{
+name|id
+operator|=
+literal|"CAN'T ENCODE UTF8"
+expr_stmt|;
+block|}
 comment|// export for JMX
 operator|new
 name|ReplicationStatistics
