@@ -539,6 +539,7 @@ Release 0.21.0 - Unreleased
    HBASE-3002  Fix zookeepers.sh to work properly with strange JVM options
    HBASE-3028  No basescanner means no GC'ing of split, offlined parent regions
    HBASE-2989  [replication] RSM won't cleanup after locking if 0 peers
+   HBASE-2992  [replication] MalformedObjectNameException in ReplicationMetrics
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
